# echosmart

./: .env.example  .gitignore  CHANGELOG.md  ECHOSMART_API_Testing_DevOps.md  LICENSE  Makefile  README.md  TASK_LIST.md  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: arquitecto-profesional.agent.md  pro-architect.agent.md
.github/workflows/: build-deb.yml  ci.yml  copilot-setup-steps.yml  demo.yml  deploy.yml  iso.yml  mobile.yml
assets/: README.md
backend/: .env.example  Dockerfile  README.md  main.py  package.json  requirements.txt
backend/src/: app.js  config.py  database.py  dependencies.py  main.py  server.js
backend/tests/: conftest.py  test_alerts.py  test_auth.py  test_gateways.py  test_health.py  test_reports.py  test_sensors.py
database/postgres/: rls_policies.sql  schema.sql
demo/: index.html  package-lock.json  package.json  vite.config.js
demo/css/: styles.css
demo/js/: demo.js
demo/src/: index.html  main.js
desktop/: README.md  package.json
docs/: ECHOSMART_Arquitectura_Software.md  ECHOSMART_Backend_Funciones.md  ECHOSMART_Indice_Maestro.md  ECHOSMART_Sensores_Hardware.md  README.md  api-spec.md  app-functionality.md  architecture.md  backend-integration.md  cloud-deployment.md  communication-protocols.md  contributing.md  database-schema.md  deb-packaging.md  deployment.md  diagramas-bocetos.md  diagramas-esquemas.md  directivas-proyecto.md  environment-variables.md  features-roadmap.md  frontend.md  gateway-edge-computing.md  gateway-iso-setup.md  getting-started.md  glosario.md  hosting-setup.md  local-dev-infrastructure.md  manual-usuario.md  mqtt-topics.md  normas-estandares.md  production-kit.md  project-structure.md  raspberry-pi-setup.md  roadmap.md  security.md  server-iso-setup.md  troubleshooting.md
frontend/: .env.example  .eslintrc.cjs  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/public/: index.html
frontend/scripts/: test.js
frontend/src/: App.jsx  App.tsx  index.css  main.jsx
gateway/: .env.example  Dockerfile  Makefile  README.md  __init__.py  cloud_sync.py  config.py  conftest.py  echosmart-gateway.service  heartbeat.py  main.py  models.py  mqtt_handler.py  pyproject.toml  requirements.txt  sensors.json  ssdp_discovery.py
gateway/c/: echosmart-sysinfo.c
gateway/cpp/: .clang-format  CMakeLists.txt  cli.cpp  cli.h  echosmart-gateway.cpp  echosmart-sensor-read.cpp  echosmart-sysinfo.cpp  main.cpp
gateway/cpp/commands/: cmd_calibrate.cpp  cmd_calibrate.h  cmd_help.cpp  cmd_help.h  cmd_list.cpp  cmd_list.h  cmd_read.cpp  cmd_read.h  cmd_run.cpp  cmd_run.h  cmd_setup.cpp  cmd_setup.h  cmd_status.cpp  cmd_status.h  cmd_sysinfo.cpp  cmd_sysinfo.h  cmd_test.cpp  cmd_test.h  cmd_version.cpp  cmd_version.h
gateway/cpp/core/: alert_engine.cpp  alert_engine.h  data_store.cpp  data_store.h  gateway.cpp  gateway.h  sensor_poller.cpp  sensor_poller.h
gateway/cpp/drivers/: bh1750_driver.cpp  bh1750_driver.h  dht22_driver.cpp  dht22_driver.h  driver_factory.cpp  driver_factory.h  ds18b20_driver.cpp  ds18b20_driver.h  mhz19c_driver.cpp  mhz19c_driver.h  sensor_driver.cpp  sensor_driver.h  soil_driver.cpp  soil_driver.h
gateway/cpp/shared/: alert_rule.cpp  alert_rule.h  config_loader.cpp  config_loader.h  file_utils.cpp  file_utils.h  json_formatter.cpp  json_formatter.h  logger.cpp  logger.h  sensor_data.cpp  sensor_data.h  version.h
gateway/cpp/tests/: CMakeLists.txt  test_alert_engine.cpp  test_alert_rule.cpp  test_cli.cpp  test_config_loader.cpp  test_drivers.cpp  test_gateway_cycle.cpp  test_helpers.h  test_json_formatter.cpp  test_sensor_data.cpp
gateway/debian/: changelog  control  copyright  echosmart-gateway.service  gateway.env.default  gateway.env.example  postinst  prerm  rules
gateway/fakentp/: README.md  echosmart-timesync.sh  fakentp.py
gateway/src/: alert_engine.py  cli.py  cloud_sync.py  config.py  discovery.py  hal.py  local_db.py  mqtt_publisher.py  sensor_manager.py
gateway/src/application/: __init__.py  alert_engine.py  cloud_sync_service.py  sensor_manager.py
gateway/src/domain/: __init__.py  constants.py
gateway/src/domain/entities/: __init__.py  alert.py  gateway_config.py  sensor.py  sensor_reading.py
gateway/src/domain/interfaces/: __init__.py  publisher.py  sensor_driver.py  storage.py  sync_client.py
gateway/src/infrastructure/: __init__.py  discovery.py  driver_factory.py  hal.py  http_sync.py  http_sync_client.py  local_db.py  mqtt_publisher.py  sqlite_storage.py
gateway/src/infrastructure/drivers/: __init__.py  base.py  bh1750.py  bh1750_driver.py  dht22.py  dht22_driver.py  ds18b20.py  ds18b20_driver.py  mhz19c.py  mhz19c_driver.py  soil_moisture.py  soil_moisture_driver.py
gateway/src/sensor_drivers/: base.py  bh1750.py  dht22.py  ds18b20.py  mhz19c.py  soil_moisture.py
gateway/tests/: conftest.py  test_alert_engine.py  test_alert_engine_clean.py  test_cli.py  test_cloud_sync.py  test_cloud_sync_service.py  test_domain.py  test_domain_entities.py  test_driver_factory.py  test_drivers.py  test_hal_discovery.py  test_integration.py  test_local_db.py  test_mqtt_publisher.py  test_sensor_drivers.py  test_sensor_manager.py  test_sensor_manager_clean.py  test_sqlite_storage.py
hosting/: .env.example  README.md  env.txt  id_rsa
hosting/ntp/: .htaccess  index.php
hosting/scripts/: deploy.sh  setup.sh
hosting/site/: .htaccess  dashboard.html  forgot-password.html  index.html  init.php  login.html  register.html
hosting/wordpress/: .htaccess  wp-config-extra.php
infra/k8s/: backend-deployment.yaml  ingress.yaml
infra/nginx/: nginx.conf
infra/scripts/: setup-dev.sh
mobile/: App.js  README.md  app.json  eas.json  package.json
mosquitto/: Dockerfile  docker-entrypoint.sh
mosquitto/config/: mosquitto.conf
web/: dashboard.html  index.html
web/css/: styles.css
web/js/: app.js
(+294 files in other folders)
