[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echosmart-gateway"
version = "1.0.0"
description = "EchoSmart IoT Gateway — Precision agriculture sensor hub for Raspberry Pi"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "EchoSmart Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Agriculture",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = [
    "requests>=2.28.0",
    "paho-mqtt>=1.6.0",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
hardware = [
    "RPi.GPIO>=0.7.0",
    "adafruit-circuitpython-dht>=3.7.0",
    "adafruit-circuitpython-bh1750>=1.1.0",
    "adafruit-circuitpython-ads1x15>=2.2.0",
    "smbus2>=0.4.0",
    "pyserial>=3.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
echosmart-gateway = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
